Image file path fix Change to name spacing and size

--- a/css/main.css
+++ b/css/main.css
@@ -32,18 +32,39 @@ main {
 	height: 100%;
 }
 
-#title {
-	font-size: 8vw;
-	margin: 1rem;
+.title {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.title h1 {
 	font-family: "Libre Franklin", sans-serif;
-	letter-spacing: 2vw;
+	font-size: 13vw;
+	margin: 0;
+	letter-spacing: 6vw;
+}
+
+@media screen and (min-width: 900px) {
+	.title h1 {
+		font-size: 7vw;
+		letter-spacing: 3vw;
+		margin: 0;
+	}
+	#jacob {
+		padding-right: 3rem;
+	}
+	#watson {
+		padding-left: 3rem;
+	}
 }
 
 #skills {
 	flex-grow: 2;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	width: 100%;
 }
 
@@ -52,7 +73,7 @@ main {
 	flex-grow: 2;
 	width: 100%;
 	display: grid;
-	margin: 3rem 0rem;
+	margin: 1rem 0rem;
 }
 
 #skills a div {
@@ -68,10 +89,10 @@ h2 {
 	color: var(--fgColor);
 	background-color: white;
 	border-radius: 25rem;
-	font-size: 5vw;
-	padding: 1.5rem 4rem;
+	padding: 1.5rem 2rem;
 	font-family: "ubuntu", "san-serif";
 	transition: 0.4s;
+	width: 50%;
 }
 h2:hover {
 	color: var(--textOnTheme);
@@ -108,12 +129,12 @@ h2:hover {
 }
 
 .slideshow.devSlide > div {
-	background: url("/images/devScroll.png") repeat-x 0 100%;
+	background: url("../images/devScroll.png") repeat-x 0 100%;
 	background-position: 0 -100px;
 }
 
 .slideshow.publicSpeakingSlide > div {
-	background: url("/images/publicSpeakingScroll.png") repeat-x 0 100%;
+	background: url("../images/publicSpeakingScroll.png") repeat-x 0 100%;
 	background-position: 0 -100px;
 }
 
